css/styles.css
.board {
	display: grid;
	grid-template-rows: repeat(7, 10vh);
	grid-template-columns: repeat(7, 10vh);
	position: relative;
	width: 70vh;
	height: 70vh;
}

.board > div {
	display: grid;
	place-items: center center;
	user-select: none;
	transition: 0.2s all;
}

.board > div > img {
	transition: 0.5s all;
}

.button {
	background-color: #EC7063;
	border: none;
	color: white;
	padding: 5px 12px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	font-size: 16px;
	margin: 4px 2px;
	cursor: pointer;
}

.body-container {
	display: flex;
}

.sidebar {
	display: flex;
	flex-direction: row;
	padding-left: 3vw;
	width: calc(97vw - 70vh);
	position: relative;
}

.sidebar > div > p {
	border: 1px solid black;
	border-radius: 4px 4px 0 0;
	padding: 2px;
	margin: 0;
	cursor: pointer;
}

.sidebar > div.selected > p {
	background-color: rgba(0, 0, 0, 0.1);
}

.sidebar > div > button {
	border: 1px solid black;
	border-radius: 4px 4px 0 0;
	padding: 2px;
	margin: 0;
	cursor: pointer;
}

.sidebar > div > div {
	display: none;
	position: absolute;
	top: 1em;
	left: 3vw;
}

.sidebar > div.selected > div {
	display: block;
}

.hidden {
	visibility: hidden;
}

.timer-bar,.progressbar {
	background-color: white;
	border: 1px black solid;
	padding: 1px;
}

.timer-bar > div,.progressbar > div {
	background-color: black;
	width: 40%;
  /* Adjust with JavaScript */
	height: 5px;
}

.moveTimerBox {
	position: fixed;
	top: 5px;
	left: 5px;
	display: none;
}

.dark-mode {
	position: fixed;
	top: 5px;
	right: 5px;
}

.dark-mode-switch {
	position: relative;
	display: inline-block;
	width: 60px;
	height: 34px;
}

.dark-mode-switch input {
	opacity: 0;
	width: 0;
	height: 0;
}

.dark-mode-switch .slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	border-radius: 34px;
	background-color: #ccc;
	transition: 0.4s;
}

.dark-mode-switch .slider:before {
	position: absolute;
	content: '';
	height: 26px;
	width: 26px;
	left: 4px;
	bottom: 4px;
  /* background-color: white; */
  /* border-radius: 50%; */
	background-image: url('../images/dark-mode.svg');
	transition: 0.4s;
}

.dark-mode-switch input:checked + .slider {
	background-color: #ccc;
}

.dark-mode-switch input:checked + .slider:before {
	transform: translateX(26px);
	background-image: url('../images/light-mode.svg');
}

@media screen and (max-aspect-ratio: 4/3) {
	.body-container {
		flex-direction: column;
		text-align: center;
		align-items: center;
	}

	.board {
		grid-template-rows: repeat(7, 14vw);
		grid-template-columns: repeat(7, 14vw);
		width: 98vw;
		height: 98vw;
	}

	.sidebar > div > p {
		padding: 4px 2px;
	}

	.sidebar > div > button {
		padding: 4px 2px;
		font: 16px Times New Roman;
	}

	.sidebar > div > div {
		top: calc(1em + 8px);
		text-align: center;
		left: 50%;
		transform: translateX(-50%);
		width: 90vw;
	}

	.sidebar {
		padding-left: 0;
		width: auto;
	}

	.dark-mode {
		color: white;
		background-color: black;
	}
}

